change exec to ProcessBuilder